feat: add Cloudflare Web Analytics

--- a/index.html
+++ b/index.html
@@ -146,6 +146,10 @@
 <body>
   <div id="root"></div>
   <script type="module" src="/index.tsx"></script>
+  <!-- Cloudflare Web Analytics -->
+  <script defer src='https://static.cloudflareinsights.com/beacon.min.js'
+    data-cf-beacon='{"token": "8056307172cf4a9ba17da7251d46f46c"}'></script>
+  <!-- End Cloudflare Web Analytics -->
 </body>
 
 </html>
